# dial

./: LICENSE  README.md  mkdocs.yml  project_demo.py  pyproject.toml
docs/: api.md  architecture.md  examples.md  index.md  usage.md
examples/: README.md  showcase.py
src/dial/: __init__.py  cli.py  clock.py  element.py  utils.py
src/dial/elements/: __init__.py  face.py  hands.py  numerals.py  overlay.py  ticks.py
tests/: test_clock.py  test_elements.py  test_integration.py  test_utils.py
